<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CanditoTrainingHQ</string>
    <string name="first_name">Hi, name</string>
    <string name="curr_bench">Current Bench:</string>
    <string name="goal_bench">Goal:</string>
    <string name="curr_squat">Current Squat:</string>
    <string name="goal_squat">Goal:</string>
    <string name="curr_dead">Current Dead:</string>
    <string name="goal_dead">Goal:</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_progress">Progress</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_program">Program</string>
    <string name="title_activity_create_program">CreateProgram</string>
    <string name="title_activity_faq">FAQ</string>

</resources>
